sass/styles.scss
@charset "utf-8";

@font-face {
  font-family: Alegreya;
  font-style: normal;
  font-weight: 400;
  src:
    url(../fonts/Alegreya-Regular.woff2) format('woff2'),
    url(../fonts/Alegreya-Regular.woff) format('woff');
}

@font-face {
  font-family: Alegreya;
  font-style: normal;
  font-weight: 700;
  src:
    url(../fonts/Alegreya-Bold.woff2) format('woff2'),
    url(../fonts/Alegreya-Bold.woff) format('woff');
}

@font-face {
  font-family: Alegreya;
  font-style: italic;
  font-weight: 400;
  src:
    url(../fonts/Alegreya-Italic.woff2) format('woff2'),
    url(../fonts/Alegreya-Italic.woff) format('woff');
}

$text: hsl(0, 0%, 14%);

$family-primary: Alegreya, serif;
$family-secondary: Alegreya, serif;
$family-code: Menlo, Monaco, 'DejaVu Sans Mono', Consolas, 'Courier New', monospace;

$primary: #0389a3;

$link: $text;
$link-hover: $primary;

$code-size: 1em;

$body-background-color: #e8e8e8;

$tag-background-color: $primary;
$tag-color: #fff;

$footer-background-color: #f3f4f5;
$footer-padding: 3rem 1.5rem 3rem;

$desktop: 960px;
$widescreen-enabled: false;
$fullhd-enabled: false;

@import "../node_modules/bulma/sass/utilities/_all.sass";
@import "../node_modules/bulma/sass/base/_all.sass";
@import "../node_modules/bulma/sass/elements/icon.sass";
@import "../node_modules/bulma/sass/elements/tag.sass";
@import "../node_modules/bulma/sass/elements/content.sass";
@import "../node_modules/bulma/sass/elements/container.sass";
@import "../node_modules/bulma/sass/elements/title.sass";

$navbar-breakpoint: $tablet;

@import "../node_modules/bulma/sass/components/navbar.sass";
@import "../node_modules/bulma/sass/components/card.sass";
@import "../node_modules/bulma/sass/layout/footer.sass";
@import "./solarized-light";

body {
  font-variant-ligatures: common-ligatures;
}

nav {
  font-size: 1.25rem;
}

div.navbar-brand {
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

/* Remove underline that appears when active or on hover */
.navbar-item.is-tab {
  border-bottom: 0;
}

p a {
  text-decoration: underline;
}

p,
ul,
ol {
  font-size: 1.25rem;
}

footer p {
  font-size: 1rem;
}

div.date {
  font-size: 1rem;
  font-style: italic;
}

.code {
  box-shadow: 0 1px 2px 0 rgba(34, 36, 38, 0.15);
  border-radius: 0.28571429rem;
  border: 1px solid rgba(34, 36, 38, 0.15);
}

.content pre {
  padding: 1.25em;
}

.code pre {
  background-color: #eee8d5;
  overflow: auto;
}

code span {
  font-size: 1em;
}

.card-content {
  padding-top: 1rem;
  padding-bottom: 1rem;
  padding-right: 1.25rem;
  padding-left: 1.25rem;
}

article.card.post {
  margin-top: 10px;
  margin-bottom: 10px;
}

@media screen and (min-width: $tablet) {
  nav {
    font-size: 1.5rem;
  }

  p,
  ul,
  ol {
    font-size: 1.5rem;
  }

  footer p {
    font-size: 1.25rem;
  }

  div.date {
    font-size: 1.25rem;
  }

  .card-content {
    padding-top: 2rem;
    padding-bottom: 2rem;
    padding-right: 3rem;
    padding-left: 3rem;
  }

  article.card.post {
    margin-top: 30px;
    margin-bottom: 30px;
  }
}

@media screen and (min-width: $desktop) {
  .card-content {
    padding-top: 3rem;
    padding-bottom: 3rem;
    padding-right: 4rem;
    padding-left: 4rem;
  }
}

.article-date {
  margin-right: 0.5em;
}

